# multiaset_quant_engine

./: README.md  pyproject.toml
config/: default_params.yml  grid.yml  grid_cagr25_fast.yml  grid_cagr_attack.yml  grid_cagr_balance_push.yml  grid_cagr_breakout.yml  grid_cagr_push2.yml  grid_hysteresis_push.yml  grid_mid.yml  grid_mid_fast.yml  grid_regime200_250_vt035.yml  grid_round10_attack.yml  grid_round10_mid.yml  grid_round10_tiny.yml  grid_round11_ultra_attack.yml  grid_round12_tiny.yml  grid_round13_cagr25_ultra.yml  grid_round13_tiny_cagr_push.yml  grid_round4_more_aggressive.yml  grid_round5_target.yml  grid_round6_weekly_target.yml  grid_round7a_monthly_universe_expanded.yml  grid_round7b_weekly_universe_expanded.yml  grid_round8_weekly_voltarget_expanded.yml  grid_round9_weekly_hybrid_expanded.yml  grid_tiny.yml  portfolio_70_30.yml  portfolio_top1.yml  portfolio_top2_conditional.yml  universe.yml  universe_round10.yml  universe_round12_expanded_v2.yml
data/: prices_synth.csv  prices_synth_2000_2016.csv  prices_synth_long.csv
out_grid_mid_fast_synth_2000_2016/: best_params.json  param_summary.csv  wf_results.csv
out_grid_synth_tiny/: best_params.json  param_summary.csv  wf_results.csv
out_grid_tiny_synth_2000_2016/: param_summary.csv  wf_results.csv
out_grid_tiny_synth_long/: best_params.json  param_summary.csv  wf_results.csv
out_single_synth/: equity.csv  metrics.json  metrics_pretty.json  rebalance_log.csv  signals.csv  weights.csv  yearly_returns.csv
scripts/: analyze_dashboard.py  analyze_dashboard_plus.py  annual_returns.py  make_report.py  (+10 more)
(+63 files in other folders)
